# nodejs-rust

./: .gitattributes  LICENSE_MIT  README.md  analysis.ipynb  package-lock.json
azure-functions/update-trigger/: config.json  index.js
go/: README.md  perf.go
node/: package.json  perf.js  run-device.js  run.js
python/: perf-wasmtime.py  run.py
rustymachine-wasmpack/: Cargo.toml  README.md  index.js
rustymachine-wasmpack/src/: main.rs
smartcore-ssvm/: Cargo.toml  README.md  package.json
smartcore-ssvm/go/: README.md  go.mod  go.sum  main.go
smartcore-ssvm/node/: SendCloudToDeviceMessages.js  SimulatedDevice.js  app.js  config.json  package.json
smartcore-ssvm/src/: lib.rs  main.rs
smartcore-wasi/: .gitignore  Cargo.toml  README.md  analysis.ipynb  perf.sh  process-data.py
smartcore-wasi/azure-functions/: package.json
smartcore-wasi/go/: README.md  go.mod  main.go  perf.go
smartcore-wasi/go/lib/go/: glue.go  smartcore_wasi_lib.wasm
smartcore-wasi/node/: README.md  config.json  perf.js  run.js  run.mjs  smartcore_wasi_lib.wasm
smartcore-wasi/node/lib/js/: glue.js  glue.mjs
smartcore-wasi/python/: .gitignore  README.md  perf-wasmer.py  perf-wasmtime.py  requirements.txt  run-device.py  run-wasmer.py  run.py  run_wasmer.py  run_wasmtime.py  smartcore_wasi_lib.wasm
smartcore-wasi/python/lib/python/: glue.py  glue_wasmer.py  glue_wasmtime.py  smartcore_wasi_lib.wasm
smartcore-wasi/src/: lib.rs  main.rs
smartcore-wasmpack/: Cargo.toml  package-lock.json  package.json
smartcore-wasmpack/src/: lib.rs  main.rs
src/: lib.rs  main.rs
(+5 files in other folders)
