[package]
name = "smartcore-wasi"
version = "0.1.0"
authors = ["proohit <direnc99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type =["cdylib"]
name = "smartcore_wasi_lib"

[dependencies]
wasm-bindgen = "=0.2.74"
smartcore = {git = "https://github.com/smartcorelib/smartcore", branch="development", features=["serde", "nalgebra"]}
serde = "1.0.125"
bincode = "1.3.3"
