[package]
name = "smartcore-wasi"
version = "0.1.0"
authors = ["proohit <direnc99@gmail.com>"]
edition = "2018"

[lib]
crate-type =["cdylib"]
name = "smartcore_wasi_lib"

[dependencies]
smartcore = {git = "https://github.com/smartcorelib/smartcore", branch="development", features=["serde", "nalgebra"]}
serde = "1.0.125"
bincode = "1.3.3"
os_info = { version = "3.0", default-features = false }
chrono = "*"
csv = "1.1"

